--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,8 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0'
     implementation "dev.chrisbanes.accompanist:accompanist-coil:0.6.1"
+    implementation "androidx.navigation:navigation-compose:1.0.0-alpha08"
+    implementation 'androidx.navigation:navigation-runtime-ktx:2.3.3'
 
 
     testImplementation 'junit:junit:4.13.2'
