--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,8 +74,8 @@ dependencies {
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0'
-    implementation "dev.chrisbanes.accompanist:accompanist-coil:0.6.1"
-    implementation "androidx.navigation:navigation-compose:1.0.0-alpha08"
+    implementation "com.google.accompanist:accompanist-coil:0.13.0"
+    implementation "androidx.navigation:navigation-compose:2.4.0-alpha04"
     implementation 'androidx.navigation:navigation-runtime-ktx:2.3.3'
 
 
